# itmo-ml-sys-des-2024

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: ml_system_design_doc.md
scripts/: codestyle.py
