[tool.poetry]
name = "What to eat?"
version = "0.1.0"
description = "An app for menu generation."
authors = ["askatasuna <andruhabobr@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flake8 = "^7.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
poethepoet = "^0.29.0"

[tool.poetry.scripts]
format = "black.__main__:main"
lint = "ruff._cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
isort = "*"
black = "*"
mypy = "*"




[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "*"

[tool.poe]
default_task_type = "script"

[tool.poe.tasks]
flake = "scripts.codestyle:_run_flake"
black = "scripts.codestyle:_run_black(modify=False)"
format = "scripts.codestyle:_run_black(modify=True)"
test = "scripts.test:_test"
metrics = "scripts.metrics:_run_check"
lint.sequence = ["flake", "black"]